<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/main_layout_relative">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/threshold_steps"
        android:id="@+id/txtViewThresholds"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/moving_average_steps"
        android:id="@+id/txtViewMovingAverage"
        android:textSize="30sp"
        android:layout_below="@+id/txtViewThresholds"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/android_steps"
        android:id="@+id/txtViewAndroidSteps"
        android:textSize="30sp"
        android:layout_below="@id/txtViewMovingAverage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textThreshold"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonStopCounter"
        android:layout_alignEnd="@+id/buttonStopCounter"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textMovingAverage"
        android:textSize="30sp"
        android:layout_above="@+id/txtViewAndroidSteps"
        android:layout_alignLeft="@+id/textThreshold"
        android:layout_alignStart="@+id/textThreshold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textAndroid"
        android:textSize="30sp"
        android:layout_alignTop="@+id/txtViewAndroidSteps"
        android:layout_alignLeft="@+id/textMovingAverage"
        android:layout_alignStart="@+id/textMovingAverage" />
    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:id="@+id/buttonStartCounter"
        android:textSize="20sp"
        android:layout_alignTop="@+id/buttonStopCounter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/stop"
        android:id="@+id/buttonStopCounter"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instant_acc"
        android:id="@+id/txtViewDyDt"
        android:textSize="30sp"
        android:layout_below="@+id/textViewDistance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textInstantAcc"
        android:textSize="30sp"
        android:layout_alignTop="@+id/txtViewDyDt"
        android:layout_alignRight="@+id/txtViewMovingAverage"
        android:layout_alignEnd="@+id/txtViewMovingAverage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/distance_traveled"
        android:id="@+id/textViewDistance"
        android:textSize="30sp"
        android:layout_below="@+id/txtViewAndroidSteps"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textDistance"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textViewDistance"
        android:layout_toLeftOf="@+id/textAndroid"
        android:layout_toStartOf="@+id/textAndroid" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/step_info"
        android:id="@+id/buttonStepInfo"
        android:textSize="20sp"
        android:layout_above="@+id/buttonStartCounter"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

</RelativeLayout>
