<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nisargpatel.deadreckoning.activity.StepCalibrationActivity"
    android:id="@+id/calibration_layout_relative">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Step count:"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textCalibrateSteps"
        android:textSize="30sp"
        android:layout_marginRight="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/buttonStopCalibration" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_distance_traveled"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/buttonStartCalibration"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:id="@+id/buttonStartCalibration"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/stop"
        android:id="@+id/buttonStopCalibration"
        android:textSize="20sp"
        android:layout_alignTop="@+id/buttonStartCalibration"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/textCalibrationDistance"
        android:text="@string/zero"
        android:textSize="35sp"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/set_stride_length"
        android:id="@+id/buttonSetStrideLength"
        android:textSize="20sp"
        android:layout_below="@+id/textCalibrationDistance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instant_acc"
        android:id="@+id/textView3"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textCalibrateInstantAcc"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textView3"
        android:layout_alignRight="@+id/textCalibrateSteps" />

</RelativeLayout>
