
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SetThresholds"
    android:id="@+id/set_thresholds_layout_relative">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_upper"
    android:id="@+id/txtView4"
    android:textSize="15sp"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="10dp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:ems="10"
    android:id="@+id/textUpper"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_below="@+id/txtView4"
    android:text="@string/zero"
    android:textSize="25sp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_lower"
    android:id="@+id/txtView5"
    android:textSize="15sp"
    android:layout_below="@+id/txtView4"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginTop="70dp" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="numberDecimal"
    android:ems="10"
    android:id="@+id/textLower"
    android:layout_below="@+id/txtView5"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:text="@string/zero"
    android:textSize="25sp" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="75dp"
    android:text="@string/set_thresholds"
    android:id="@+id/buttonSetThresholds"
    android:onClick="buttonSetThresholds"
    android:textSize="20sp"
    android:layout_below="@+id/textLower"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="70dp" />

</RelativeLayout>
