<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nisargpatel.inertialnavigation.GraphActivity">

    <Button
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:id="@+id/buttonGraphStart"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp" />

    <Button
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/stop"
        android:id="@+id/buttonGraphStop"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutGraph"></LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:text="@string/set_stride_length"
        android:id="@+id/buttonGraphSetStrideLength"
        android:textSize="15sp"
        android:layout_alignBottom="@+id/buttonGraphStop"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
