<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/main_layout_relative">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/threshold_steps"
        android:id="@+id/txtView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/moving_average_steps"
        android:id="@+id/txtView2"
        android:textSize="30sp"
        android:layout_below="@+id/txtView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/android_steps"
        android:id="@+id/txtView3"
        android:textSize="30sp"
        android:layout_below="@id/txtView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textThreshold"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonStopCounter"
        android:layout_alignEnd="@+id/buttonStopCounter"
        android:layout_marginRight="23dp"
        android:layout_marginEnd="23dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textMovingAverage"
        android:textSize="30sp"
        android:layout_above="@+id/txtView3"
        android:layout_alignLeft="@+id/textThreshold"
        android:layout_alignStart="@+id/textThreshold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textAndroid"
        android:textSize="30sp"
        android:layout_alignTop="@+id/txtView3"
        android:layout_alignLeft="@+id/textMovingAverage"
        android:layout_alignStart="@+id/textMovingAverage" />
    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/start"
        android:id="@+id/buttonStartCounter"
        android:textSize="20sp"
        android:layout_alignTop="@+id/buttonStopCounter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:text="@string/stop"
        android:id="@+id/buttonStopCounter"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instant_acc"
        android:id="@+id/txtView4"
        android:textSize="30sp"
        android:layout_below="@+id/txtView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textInstantAcc"
        android:textSize="30sp"
        android:layout_alignTop="@+id/txtView4"
        android:layout_alignRight="@+id/txtView2"
        android:layout_alignEnd="@+id/txtView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textA1"
        android:textSize="30sp"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/buttonStartCounter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textA2"
        android:textSize="30sp"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:layout_alignTop="@+id/textA1"
        android:layout_alignRight="@+id/buttonStartCounter"
        android:layout_alignEnd="@+id/buttonStartCounter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textA3"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textA2"
        android:layout_toRightOf="@+id/txtView3"
        android:layout_toEndOf="@+id/txtView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textA4"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textA3"
        android:layout_alignLeft="@+id/textAndroid"
        android:layout_alignStart="@+id/textAndroid" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textT1"
        android:textSize="30sp"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/textA1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textT2"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textT1"
        android:layout_alignLeft="@+id/textA2"
        android:layout_alignStart="@+id/textA2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textT3"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textT2"
        android:layout_alignLeft="@+id/textA3"
        android:layout_alignStart="@+id/textA3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:id="@+id/textT4"
        android:textSize="30sp"
        android:layout_alignTop="@+id/textT3"
        android:layout_alignLeft="@+id/textA4"
        android:layout_alignStart="@+id/textA4" />

</RelativeLayout>
